--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@mdi/font": "^5.9.55",
+    "google-maps-api-loader": "^1.1.1",
     "roboto-fontface": "*",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2",
+    "vue3-google-map": "^0.21.0",
     "vuetify": "^3.6.8",
     "webfontloader": "^1.0.0"
   },
