--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-  "projectName": "projectroute",
+  "projectName": "projectrouteback",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
